--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,9 @@
 
 .carousel-container {
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* hide disabled buttons */
